// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test APR calculations calcPoolAprs pool#497 1`] = `
{
  "gaugeAprs": [
    {
      "apr": "12.943190055320448935",
      "daysRemaining": null,
      "distributedCoinPerDay": {
        "amount": "2560573858",
        "denom": "uosmo",
      },
      "isPerpetual": true,
      "symbol": "OSMO",
    },
    {
      "apr": "13.99503455691078221",
      "daysRemaining": 69n,
      "distributedCoinPerDay": {
        "amount": "1388909868",
        "denom": "ibc/46B44899322F3CD854D2D46DEEF881958467CDD4B3B10086DA49296BBED94BED",
      },
      "isPerpetual": false,
      "symbol": "JUNO",
    },
  ],
  "superfluidApr": 5.28,
  "swapFeeApr": {
    "apr": "5.608470878012372265",
    "swapFeeValuePerDay": "10096.75551816339857142857142",
  },
  "totalApr": "37.82669549024360341",
}
`;

exports[`Test APR calculations calcPoolAprs pool#604 lockup-1 1`] = `
{
  "gaugeAprs": [
    {
      "apr": "160.64843197194232367",
      "daysRemaining": null,
      "distributedCoinPerDay": {
        "amount": "12045632211",
        "denom": "uosmo",
      },
      "isPerpetual": true,
      "symbol": "OSMO",
    },
    {
      "apr": "57.730126991022910385",
      "daysRemaining": 70n,
      "distributedCoinPerDay": {
        "amount": "55555556424",
        "denom": "ibc/987C17B11ABC2B20019178ACE62929FE9840202CE79498E29FE8E5CB02B7C0A4",
      },
      "isPerpetual": false,
      "symbol": "STARS",
    },
  ],
  "superfluidApr": null,
  "swapFeeApr": {
    "apr": "9.153771984981903825",
    "swapFeeValuePerDay": "6245.893724706363",
  },
  "totalApr": "227.53233094794713788",
}
`;

exports[`Test APR calculations calcPoolAprs pool#604 lockup-7 1`] = `
{
  "gaugeAprs": [
    {
      "apr": "96.38910481319423105",
      "daysRemaining": null,
      "distributedCoinPerDay": {
        "amount": "7227382748",
        "denom": "uosmo",
      },
      "isPerpetual": true,
      "symbol": "OSMO",
    },
    {
      "apr": "115.46025302490672154",
      "daysRemaining": 70n,
      "distributedCoinPerDay": {
        "amount": "111111111927",
        "denom": "ibc/987C17B11ABC2B20019178ACE62929FE9840202CE79498E29FE8E5CB02B7C0A4",
      },
      "isPerpetual": false,
      "symbol": "STARS",
    },
  ],
  "superfluidApr": null,
  "swapFeeApr": {
    "apr": "9.153771984981903825",
    "swapFeeValuePerDay": "6245.893724706363",
  },
  "totalApr": "221.003129823082856415",
}
`;

exports[`Test APR calculations calcPoolAprs pool#604 lockup-14 has-perpetual 1`] = `
{
  "gaugeAprs": [
    {
      "apr": "64.259389214200298735",
      "daysRemaining": null,
      "distributedCoinPerDay": {
        "amount": "4818254116",
        "denom": "uosmo",
      },
      "isPerpetual": true,
      "symbol": "OSMO",
    },
    {
      "apr": "173.19037905211033226",
      "daysRemaining": 70n,
      "distributedCoinPerDay": {
        "amount": "166666667424",
        "denom": "ibc/987C17B11ABC2B20019178ACE62929FE9840202CE79498E29FE8E5CB02B7C0A4",
      },
      "isPerpetual": false,
      "symbol": "STARS",
    },
  ],
  "superfluidApr": 5.28,
  "swapFeeApr": {
    "apr": "9.153771984981903825",
    "swapFeeValuePerDay": "6245.893724706363",
  },
  "totalApr": "251.88354025129253482",
}
`;

exports[`Test APR calculations calcPoolAprs pool#604 lockup-14 no-perpetual 1`] = `
{
  "gaugeAprs": [
    {
      "apr": "64.259389214200298735",
      "daysRemaining": null,
      "distributedCoinPerDay": {
        "amount": "4818254116",
        "denom": "uosmo",
      },
      "isPerpetual": true,
      "symbol": "OSMO",
    },
  ],
  "superfluidApr": 5.28,
  "swapFeeApr": {
    "apr": "9.153771984981903825",
    "swapFeeValuePerDay": "6245.893724706363",
  },
  "totalApr": "78.69316119918220256",
}
`;

exports[`Test APR calculations calcPoolAprs pool#605 1`] = `
{
  "gaugeAprs": [
    {
      "apr": "46.472872894663064345",
      "daysRemaining": null,
      "distributedCoinPerDay": {
        "amount": "1341688865",
        "denom": "uosmo",
      },
      "isPerpetual": true,
      "symbol": "OSMO",
    },
    {
      "apr": "158.644204932075392035",
      "daysRemaining": 161n,
      "distributedCoinPerDay": {
        "amount": "9802777778561",
        "denom": "ibc/B9E0A1A524E98BB407D3CED8720EFEFD186002F90C1B1B7964811DD0CCC12228",
      },
      "isPerpetual": false,
      "symbol": "HUAHUA",
    },
  ],
  "superfluidApr": 5.28,
  "swapFeeApr": {
    "apr": "7.81809531777339549",
    "swapFeeValuePerDay": "2053.97261021461942857142858",
  },
  "totalApr": "218.21517314451185187",
}
`;

exports[`Test pool calculations calcCoinsNeededForValue 0 for pool#1 1`] = `
[
  {
    "amount": "0",
    "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
    "displayAmount": "0",
    "shareTotalValue": "0",
    "symbol": "ATOM",
    "totalDollarValue": "226964145.58592049",
    "unitRatio": "0",
  },
  {
    "amount": "0",
    "denom": "uosmo",
    "displayAmount": "0",
    "shareTotalValue": "0",
    "symbol": "OSMO",
    "totalDollarValue": "219898456.741054",
    "unitRatio": "0",
  },
]
`;

exports[`Test pool calculations calcCoinsNeededForValue 10 for pool#1 1`] = `
[
  {
    "amount": "136500",
    "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
    "displayAmount": "0.1365",
    "shareTotalValue": "5",
    "symbol": "ATOM",
    "totalDollarValue": "226964145.58592049",
    "unitRatio": "2.202988928975e-8",
  },
  {
    "amount": "549450",
    "denom": "uosmo",
    "displayAmount": "0.54945",
    "shareTotalValue": "5",
    "symbol": "OSMO",
    "totalDollarValue": "219898456.741054",
    "unitRatio": "2.27377448396e-8",
  },
]
`;

exports[`Test pool calculations calcCoinsNeededForValue 10 for pool#497 1`] = `
[
  {
    "amount": "275633",
    "denom": "ibc/46B44899322F3CD854D2D46DEEF881958467CDD4B3B10086DA49296BBED94BED",
    "displayAmount": "0.275633",
    "shareTotalValue": "5",
    "symbol": "JUNO",
    "totalDollarValue": "33383106.20983148",
    "unitRatio": "1.497758353753e-7",
  },
  {
    "amount": "549450",
    "denom": "uosmo",
    "displayAmount": "0.54945",
    "shareTotalValue": "5",
    "symbol": "OSMO",
    "totalDollarValue": "32326707.4682188",
    "unitRatio": "1.5467071630835e-7",
  },
]
`;

exports[`Test pool calculations calcCoinsNeededForValue 10 for pool#604 1`] = `
[
  {
    "amount": "7051808",
    "denom": "ibc/987C17B11ABC2B20019178ACE62929FE9840202CE79498E29FE8E5CB02B7C0A4",
    "displayAmount": "7.051808",
    "shareTotalValue": "5",
    "symbol": "STARS",
    "totalDollarValue": "13817947.976249658516",
    "unitRatio": "3.6184821720982e-7",
  },
  {
    "amount": "549450",
    "denom": "uosmo",
    "displayAmount": "0.54945",
    "shareTotalValue": "5",
    "symbol": "OSMO",
    "totalDollarValue": "11087098.9624122",
    "unitRatio": "4.5097414724547e-7",
  },
]
`;

exports[`Test pool calculations calcMaxCoinsForPool pool#1 1`] = `
[
  {
    "amount": "838542",
    "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
  },
  {
    "amount": "3375361",
    "denom": "uosmo",
  },
]
`;

exports[`Test pool calculations calcMaxCoinsForPool pool#25 1`] = `
[
  {
    "amount": "0",
    "denom": "ibc/1DCC8A6CB5689018431323953344A9F6CC4D0BFB261E88C9F7777372C10CD076",
  },
  {
    "amount": "0",
    "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
  },
  {
    "amount": "0",
    "denom": "uosmo",
  },
]
`;

exports[`Test pool calculations calcMaxCoinsForPool pool#604 1`] = `
[
  {
    "amount": "67812902",
    "denom": "ibc/987C17B11ABC2B20019178ACE62929FE9840202CE79498E29FE8E5CB02B7C0A4",
  },
  {
    "amount": "5283728",
    "denom": "uosmo",
  },
]
`;

exports[`Test pool calculations convertDollarValueToCoins 0 dollar 1`] = `
[
  {
    "amount": "0",
    "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
    "displayAmount": "0",
    "symbol": "ATOM",
    "value": "0",
  },
  {
    "amount": "0",
    "denom": "uosmo",
    "displayAmount": "0",
    "symbol": "OSMO",
    "value": "0",
  },
]
`;

exports[`Test pool calculations convertDollarValueToCoins 2 token pool 1`] = `
[
  {
    "amount": "136500.13650013650014",
    "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
    "displayAmount": "0.13650013650013650014",
    "symbol": "ATOM",
    "value": "5",
  },
  {
    "amount": "549450.54945054945055",
    "denom": "uosmo",
    "displayAmount": "0.54945054945054945055",
    "symbol": "OSMO",
    "value": "5",
  },
]
`;

exports[`Test pool calculations convertDollarValueToCoins 3 token pool 1`] = `
[
  {
    "amount": "7071428.57142857142857",
    "denom": "ibc/1DCC8A6CB5689018431323953344A9F6CC4D0BFB261E88C9F7777372C10CD076",
    "displayAmount": "7.07142857142857142857",
    "symbol": "REGEN",
    "value": "9.9",
  },
  {
    "amount": "1365.001365001365",
    "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
    "displayAmount": "0.001365001365001365",
    "symbol": "ATOM",
    "value": "0.05",
  },
  {
    "amount": "5494.50549450549451",
    "denom": "uosmo",
    "displayAmount": "0.00549450549450549451",
    "symbol": "OSMO",
    "value": "0.05",
  },
]
`;

exports[`Test pool calculations convertDollarValueToCoins 4 token pool 1`] = `
[
  {
    "amount": "1785714.28571428571429",
    "denom": "ibc/1DCC8A6CB5689018431323953344A9F6CC4D0BFB261E88C9F7777372C10CD076",
    "displayAmount": "1.78571428571428571429",
    "symbol": "REGEN",
    "value": "2.5",
  },
  {
    "amount": "68250.06825006825007",
    "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
    "displayAmount": "0.06825006825006825007",
    "symbol": "ATOM",
    "value": "2.5",
  },
  {
    "amount": "642673.52185089974293",
    "denom": "ibc/A0CC0CF735BFB30E730C70019D4218A1244FF383503FF7579C9201AB93CA9293",
    "displayAmount": "0.64267352185089974293",
    "symbol": "XPRT",
    "value": "2.5",
  },
  {
    "amount": "274725.27472527472527",
    "denom": "uosmo",
    "displayAmount": "0.27472527472527472527",
    "symbol": "OSMO",
    "value": "2.5",
  },
]
`;

exports[`Test pool calculations makePoolPairs 1`] = `
[
  {
    "baseAddress": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
    "baseName": "atom",
    "baseSymbol": "ATOM",
    "poolAddress": "osmo1mw0ac6rwlp5r8wapwk3zs6g29h8fcscxqakdzw9emkne6c8wjp9q0t3v8t",
    "poolId": "1",
    "quoteAddress": "uosmo",
    "quoteName": "osmo",
    "quoteSymbol": "OSMO",
  },
  {
    "baseAddress": "ibc/46B44899322F3CD854D2D46DEEF881958467CDD4B3B10086DA49296BBED94BED",
    "baseName": "juno",
    "baseSymbol": "JUNO",
    "poolAddress": "osmo1h7yfu7x4qsv2urnkl4kzydgxegdfyjdry5ee4xzj98jwz0uh07rqdkmprr",
    "poolId": "497",
    "quoteAddress": "uosmo",
    "quoteName": "osmo",
    "quoteSymbol": "OSMO",
  },
  {
    "baseAddress": "ibc/BE1BB42D4BE3C30D50B68D7C41DB4DFCE9678E8EF8C539F6E6A9345048894FCC",
    "baseName": "ust",
    "baseSymbol": "USTC",
    "poolAddress": "osmo10d8ddsydag5xrnl2kacmkjtdxddstvz4jvraqqpf6ss2n7fy6lkqw4sx2f",
    "poolId": "560",
    "quoteAddress": "uosmo",
    "quoteName": "osmo",
    "quoteSymbol": "OSMO",
  },
  {
    "baseAddress": "ibc/0EF15DF2F02480ADE0BB6E85D9EBB5DAEA2836D3860E9F97F9AADE4F57A31AA0",
    "baseName": "luna",
    "baseSymbol": "LUNC",
    "poolAddress": "osmo1f7x8t6zv4tdmu2txgztqc9jwfa0kmx2jpgcmah69njaxc6h5gszsp8884g",
    "poolId": "561",
    "quoteAddress": "uosmo",
    "quoteName": "osmo",
    "quoteSymbol": "OSMO",
  },
  {
    "baseAddress": "ibc/0EF15DF2F02480ADE0BB6E85D9EBB5DAEA2836D3860E9F97F9AADE4F57A31AA0",
    "baseName": "luna",
    "baseSymbol": "LUNC",
    "poolAddress": "osmo1yggqusvjqscjy03ysdmjh5hxmt6tv20u5ufrsuy67ksnw2xqsvzql2j70s",
    "poolId": "562",
    "quoteAddress": "ibc/BE1BB42D4BE3C30D50B68D7C41DB4DFCE9678E8EF8C539F6E6A9345048894FCC",
    "quoteName": "ust",
    "quoteSymbol": "USTC",
  },
]
`;
